After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 749028 - interactive-dialog: Add a missing break on a switch statement
interactive-dialog: Add a missing break on a switch statement
Status: RESOLVED FIXED
Product: gnome-screenshot
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: gnome-screenshot-maint
gnome-screenshot-maint
Depends on:
Blocks:
 
 
Reported: 2015-05-06 16:47 UTC by Rui Matos
Modified: 2015-06-29 14:38 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
interactive-dialog: Add a missing break on a switch statement (1005 bytes, patch)
2015-05-06 16:47 UTC, Rui Matos
committed Details | Review

Description Rui Matos 2015-05-06 16:47:22 UTC
uncovered by a coverity scan
Comment 1 Rui Matos 2015-05-06 16:47:31 UTC
Created attachment 302990 [details] [review]
interactive-dialog: Add a missing break on a switch statement

Otherwise if the border effect gsetting is vintage the combo box will
show up as none.
Comment 2 Robert Roth 2015-06-12 12:05:38 UTC
Review of attachment 302990 [details] [review]:

Thanks for spotting this, this is a prtoblem indeed.
Comment 3 Rui Matos 2015-06-29 14:38:29 UTC
Attachment 302990 [details] pushed as 2853e94 - interactive-dialog: Add a missing break on a switch statement