interactive-dialog: Add a missing break on a switch statement

Otherwise if the border effect gsetting is vintage the combo box will
show up as none.

https://bugzilla.gnome.org/show_bug.cgi?id=749028